javascript and svg

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <main class="main">
         <div class="contents-container">
             <div class="item-content">
-                <div class="temp-image"><img src="https://cdn.singleliving.kr/singleliving/2022/12/09160933/%EC%88%98%EC%A0%95%EB%90%A8_%EB%85%B8%EC%9C%A4%EC%84%9C-%EA%B7%B8%EB%A6%BC2.webp"></div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/noyoonseo.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/pciture2.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture9.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture6.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture4.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture5.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture8.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="item-content">
-                <div class="temp-image">이미지</div>
+                <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture3.svg"></div>
                 <div class="image-info">
                     <div class="profile-image"></div>
                     <div class="title-info">
