--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="category-container">
             <div class="category-box">
                 <div class="cat-img">
-                    <img src="https://img.allurekorea.com/allure/2023/06/style_647dbcbde6873.jpg" onmouseenter="zoomin(event)" onmouseleave="zoomout(event)">
+                    <img src="/Users/chosungwon/Documents/frontend/kream_clone/image/bakangs.svg" onmouseenter="zoomin(event)" onmouseleave="zoomout(event)">
                 </div>
                 <div class="cat-desc">바캉스챌린지</div>
             </div>
@@ -54,7 +54,7 @@
                 <div class="cat-desc">무더위룩</div>
             </div>
             <div class="category-box">
-                <div class="cat-img"><img src="https://play-lh.googleusercontent.com/DjFYFrM8Y4XlZ36_1mAZ8yPilKI8G0vVTnfiDJe8Of9PftWgPQ-Ymz5VKzrYrOiJubM=w3840-h2160-rw" onmouseenter="zoomin(event)" onmouseleave="zoomout(event)"></div>
+                <div class="cat-img"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/kream-image.svg" onmouseenter="zoomin(event)" onmouseleave="zoomout(event)"></div>
                 <div class="cat-desc">급상승 스타일</div>
             </div>
             <div class="category-box">
@@ -96,82 +96,107 @@
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/noyoonseo.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima1.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">noyoon251</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">🖌️✌🏻</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/pciture2.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima2.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">kwaang01</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">어우 추워🥶</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture9.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima3.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">1999soso</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">미술관 데이트😍</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture6.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima4.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">hoho__ho</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">🐶</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture4.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima6.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">99jiwon_ha</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">긱시크의 대명사 하지원 😎</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture5.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima7.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">hosu</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+
+                        </div>
                     </div>
                 </div>
+                <div class="description">첫 프로필 촬영~ 📷</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture8.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima8.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">O_when</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">연인과의 따뜻한 추억을 오왠 콘서트에서</div>
             </div>
             <div class="item-content">
                 <div class="temp-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/picture3.svg"></div>
                 <div class="image-info">
-                    <div class="profile-image"></div>
+                    <div class="profile-image"><img src="/Users/chosungwon/Documents/frontend/kream_clone/image/proima9.svg"></div>
                     <div class="title-info">
-                        <div class="title">title</div>
-                        <div class="description">description</div>
+                        <div class="title">rider_man</div>
+                        <div class="like">
+                            <div class="like_img">♥️ 25</div>
+                        </div>
                     </div>
                 </div>
+                <div class="description">가오 그만 부릴게</div>
             </div>
         </div>
     </main>
